--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'application'
 
 sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
+mainClassName = 'com.transmog.TransmogService'
 
 repositories {
     mavenCentral()
@@ -14,4 +18,8 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.+'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.+'
+}
+
+run {
+    args 'server', './transmog_service.yml'
 }
